// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dex Action Buttons <DexActionButton /> - should match snapshot 1`] = `
<View
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "opacity": 1,
    }
  }
  testID="dex_action_button_Composite_Swap_2"
>
  <Text
    style={
      [
        {},
        [
          {},
          {},
        ],
      ]
    }
    testID="Composite_Swap_2"
  >
    Swap
  </Text>
</View>
`;

exports[`Dex Action Buttons <DexAddRemoveLiquidityButton /> - should match snapshot 1`] = `
<View
  style={
    [
      [
        {},
        undefined,
      ],
      {},
    ]
  }
>
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "opacity": 1,
      }
    }
    testID="pool_pair_remove_foo"
  >
    <Text />
  </View>
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "opacity": 1,
      }
    }
    testID="pool_pair_add_foo"
  >
    <Text />
  </View>
</View>
`;
